--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.2",
+    "mongoose": "^6.0.13",
     "morgan": "^1.10.0"
   }
 }
